change the domain

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "blackbellartstudio.pl",
+  "name": "blackbellstudio.pl",
   "short_name": "Blackbell",
   "description": "Eliza Czerwińska to artystka z Grudziądza, specjalizująca się w tworzeniu unikalnych i artystycznych obrazów na zamówienie. Oferuje szeroki wybór obrazów oraz profesjonalną obsługę.",
   "start_url": "/",
